--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,7 +10,7 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - focal		# 20.04
+        - focal
 
   galaxy_tags:
     - vim
