added some more tags for Ansible Galaxy

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,5 +14,11 @@ galaxy_info:
 
   galaxy_tags:
     - vim
+    - Ubuntu
+    - Focal
+    - development
+    - editor
+    - terminal
+    - sysadmin
 
 dependencies: []
